--- a/view/admin/editAdmin.html
+++ b/view/admin/editAdmin.html
@@ -126,12 +126,22 @@
             background-color: white;
             margin-bottom: 100px;
         }
+
         h3 {
             text-align: center;
         }
-        table{
+
+        table {
             margin-right: auto;
             margin-left: auto;
+        }
+        input{
+            width: 250px;
+            height: 30px;
+        }
+        img{
+            max-width: 100%;
+            height: 250px;
         }
     </style>
 </head>
@@ -159,50 +169,57 @@
 </nav>
 <div class="editTable">
     <h3>Thông tin cần nhập của sản phẩm</h3>
-    <table>
-        <tr>
-            <td>
-                <p>Nhập tên sản phẩm:</p>
-            </td>
-            <td><input type="text" name="nameProduct" value="{nameProduct}" required></td>
-        </tr>
-        <tr>
-            <td>
-                <p>Nhập giá sản phẩm:</p></td>
-            <td><input type="text" name="priceProduct" value="{priceProduct}" required>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <p>Nhập số lượng sản phẩm:</p>
-            </td>
-            <td><input type="text" name="quantityProduct" value="{quantityProduct}" required></td>
-        </tr>
-        <tr>
-            <td>
-                <p>Nhập mô tả sản phẩm: </p>
-            </td>
-            <td><textarea type="text" name="descriptionProduct" required></textarea></td>
-        </tr>
-        <tr>
-            <td>
-                <select name="categoryId" required>
-                    {categories}
-                </select>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <input type="hidden" name="image" id='image' >
-                <input type="file" id="fileButton" onchange="uploadImage(event)">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <button type="submit">Submit</button>
-            </td>
-        </tr>
-    </table>
+    <form method="post">
+        <table>
+            <tr>
+                <td>
+                    <p>Nhập tên sản phẩm:</p>
+                </td>
+                <td><input type="text" name="nameProduct" value="{nameProduct}" required></td>
+            </tr>
+            <tr>
+                <td>
+                    <p>Nhập giá sản phẩm:</p></td>
+                <td><input type="text" name="priceProduct" value="{priceProduct}" required>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>Nhập số lượng sản phẩm:</p>
+                </td>
+                <td><input type="text" name="quantityProduct" value="{quantityProduct}" required></td>
+            </tr>
+            <tr>
+                <td>
+                    <p>Nhập mô tả sản phẩm: </p>
+                </td>
+                <td><input type="text" name="descriptionProduct" value="{descriptionProduct}" required></input></td>
+            </tr>
+            <tr>
+                <td>
+                    <select name="categoryId" required>
+                        {categories}
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                   <img src="{imageProduct}">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="hidden" name="image" id='image'>
+                    <input type="file" id="fileButton" onchange="uploadImage(event)">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <button type="submit">Submit</button>
+                </td>
+            </tr>
+        </table>
+    </form>
     <div id="imgDiv"></div>
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
     <script>
