--- a/view/admin/homeOfAdmin.html
+++ b/view/admin/homeOfAdmin.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Home of admin</title>
-</head>
-<body>
-<!DOCTYPE html>
-<html lang="en">
-<head>
   <meta charset="UTF-8">
   <title>Home Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -148,10 +141,10 @@
 
     <div class="navbar-right">
 
-      <a class="nav-link" href="/signin">SIGN IN</a>
-      <a class="nav-link" href="/signup">SIGN UP</a>
+      <a class="nav-link" href="/signout">SIGN OUT</a>
     </div>
   </div>
+
 </nav>
 
 <body >
@@ -209,8 +202,9 @@
   }
 
   ul.products li img {
+
     max-width: 100%;
-    height: auto;
+    height: 250px;
   }
 
   ul.products li .product-top {
@@ -286,7 +280,5 @@
 </div>
 
 
-</body>
-</html>
 </body>
 </html>
