--- a/view/admin/addProduct.html
+++ b/view/admin/addProduct.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>addproduct</title>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+            integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+            integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+            crossorigin="anonymous"></script>
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap');
@@ -15,6 +22,7 @@
         line-height: 1.15;
         margin-top: 75px
     }
+
     /* * * * * * * * * * * * * * * * * * * * * * * * * * *
  * Reseting CSS
  */
@@ -37,8 +45,9 @@
         background: Black;
         padding-top: 0;
         padding-bottom: 0;
-        font-size: 15px
+        font-size: 15px;
     }
+
     .navbar-brand {
         width: 100px;
 
@@ -48,6 +57,13 @@
     .navbar-left {
         display: inline-block;
         margin-left: 15px;
+    }
+
+    .navbar-middle {
+        display: inline-block;
+        margin-left: 15px;
+        top: 50%;
+        left: 50%
     }
 
     .navbar-right {
@@ -119,7 +135,7 @@
     }
 </style>
 <nav class="navbar">
-    <div class="contronller">
+    <div class="controller">
         <a class="navbar-brand" href="/home">
             HOME
         </a>
@@ -129,20 +145,75 @@
             <a class="nav-link" href="#">Link 2</a>
             <a class="nav-link" href="#">Link 3</a>
             <a class="nav-link" href="#">Link 4</a>
-            <a class="nav-link" href="#">Link 5</a>
+            <a class="nav-search-box" href="/searchProduct">
+                <div class="input-group">
+                    <div class="form-outline">
+                        <input type="search" id="form1" class="form-control"/>
+                        <label class="form-label" for="form1"></label>
+                    </div>
+                    <button type="button" class="btn btn-primary">
+                        <i class="fas fa-search">Search</i>
+                    </button>
+                </div>
+            </a>
+
         </div>
 
         <div class="navbar-right">
-
-            <a class="nav-link" href="/signin">SIGN IN</a>
-            <a class="nav-link" href="/signup">SIGN UP</a>
+            <a class="nav-link" href="/signout">SIGN OUT</a>
         </div>
     </div>
 </nav>
-<body >
 
+<style>
+    .input-group {
+        float: none;
+        position: absolute;
+        top: 0%;
+        left: -5%;
+    }
+
+    .form-control {
+        height: 38px;
+    }
+
+    .form-outline {
+        float: none;
+        position: absolute;
+        top: 25%;
+        left: 65%;
+    }
+
+    .btn-primary {
+        float: none;
+        position: absolute;
+        left: 80%;
+        transform: translate(0%, 25%);
+    }
+
+    .headline {
+        text-align: center;
+        margin-top: 75px;
+        margin-bottom: 10px;
+    }
+
+    h1 {
+        font-size: 18px;
+        padding: 10px 20px;
+        text-transform: uppercase;
+        border: 1px solid #bebebe;
+        display: inline-block;
+        color: #555;
+        font-weight: 600;
+    }
+
+</style>
+<body>
+<div class="headline">
+    <h1>shop ba con sói hướng nội</h1>
+</div>
 <div class="">
-    <center>    <h3>AddProduct</h3></center>
+    <center><h3>AddProduct</h3></center>
     <form method="post" style="text-align: center">
 
         <input type="text" name="nameProduct" placeholder="name" required>
@@ -153,7 +224,7 @@
             {categories}
         </select>
         <br>
-        <input type="hidden" name="image" id ='image'>
+        <input type="hidden" name="image" id='image'>
         <input type="file" id="fileButton" onchange="uploadImage(event)">
         <button type="submit">Submit</button>
     </form>
