--- a/view/admin/editAdmin.html
+++ b/view/admin/editAdmin.html
@@ -3,170 +3,244 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+            integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
             crossorigin="anonymous"></script>
-    <!--    NAVBAR-->
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap');
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+            integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+            crossorigin="anonymous"></script>
+</head>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap');
 
-        body {
-            font-family: 'Open Sans', sans-serif;
-            font-size: 14px;
-            color: #111;
-            line-height: 1.15;
-        }
+    body {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 14px;
+        color: #111;
+        line-height: 1.15;
+        margin-top: 75px
+    }
 
-        /* * * * * * * * * * * * * * * * * * * * * * * * * * *
-     * Reseting CSS
+    /* * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * Reseting CSS
+ */
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    /* * * * * * * * * * * * * * * * * * * * * * * * * * *
+     * Styling navigation bar for large screen devices
      */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
 
-        /* * * * * * * * * * * * * * * * * * * * * * * * * * *
-         * Styling navigation bar for large screen devices
-         */
+    .navbar {
+        position: fixed;
+        z-index: 99999;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background: Black;
+        padding-top: 0;
+        padding-bottom: 0;
+        font-size: 15px;
+    }
 
-        .navbar {
-            position: fixed;
-            z-index: 99999;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background: Black;
-            padding-top: 0;
-            padding-bottom: 0;
-        }
+    .navbar-brand {
+        width: 100px;
 
+        display: inline-block;
+    }
+
+    .navbar-left {
+        display: inline-block;
+        margin-left: 15px;
+    }
+
+    .navbar-middle {
+        display: inline-block;
+        margin-left: 15px;
+        top: 50%;
+        left: 50%
+    }
+
+    .navbar-right {
+        display: inline-block;
+        margin-right: 15px;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
+    .navbar-brand,
+    .navbar .nav-link {
+        color: White;
+        text-decoration: none;
+        display: inline-block;
+        padding: 15px;
+    }
+
+    .navbar-brand {
+        font-weight: bold;
+        padding-left: 30px;
+        padding-right: 30px;
+        background: RoyalBlue;
+    }
+
+    .navbar .nav-link:hover {
+        color: LightGray;
+    }
+
+    .navbar-collapse,
+    .navbar-toggler {
+        display: none;
+    }
+
+    /* * * * * * * * * * * * * * * * * * * * * * * * * * *
+     * Override styles to support mobile devices
+     */
+
+    @media (max-width: 842px) {
+        .navbar-right,
         .navbar-left {
-            display: inline-block;
-            margin-left: 15px;
+            display: block;
+            border-top: 1px solid DimGray;
         }
 
         .navbar-right {
+            position: static;
+        }
+
+        .navbar .nav-link {
+            display: block;
+        }
+
+        .navbar-collapse:checked + .navbar {
+            max-height: 50px;
+            overflow: hidden;
+        }
+
+        .navbar-toggler {
+            color: White;
             display: inline-block;
-            margin-right: 15px;
+            padding: 15px 25px;
             position: absolute;
             top: 0;
             right: 0;
+            border-left: 1px solid DimGray;
+            cursor: pointer;
         }
+    }
 
-        .navbar-brand,
-        .navbar .nav-link {
-            color: White;
-            text-decoration: none;
-            display: inline-block;
-            padding: 15px;
-        }
+    div.editTable {
+        border: 0px solid black;
+        width: 1000px;
+        height: 450px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 100px;
+        background-color: white;
+        margin-bottom: 100px;
+    }
 
-        .navbar-brand {
-            font-weight: bold;
-            padding-left: 30px;
-            padding-right: 30px;
-            background: RoyalBlue;
-        }
+    h3 {
+        text-align: center;
+    }
 
-        .navbar .nav-link:hover {
-            color: LightGray;
-        }
+    table {
+        margin-right: auto;
+        margin-left: auto;
+    }
+    input {
+        width: 250px;
+        height: 30px;
+    }
+    img{
+        max-width: 100%;
+        height: 250px;
+    }
 
-        .navbar-collapse,
-        .navbar-toggler {
-            display: none;
-        }
-
-        /* * * * * * * * * * * * * * * * * * * * * * * * * * *
-         * Override styles to support mobile devices
-         */
-
-        @media (max-width: 842px) {
-            .navbar-right,
-            .navbar-left {
-                display: block;
-                border-top: 1px solid DimGray;
-            }
-
-            .navbar-right {
-                position: static;
-            }
-
-            .navbar .nav-link {
-                display: block;
-            }
-
-            .navbar-collapse:checked + .navbar {
-                max-height: 50px;
-                overflow: hidden;
-            }
-
-            .navbar-toggler {
-                color: White;
-                display: inline-block;
-                padding: 15px 25px;
-                position: absolute;
-                top: 0;
-                right: 0;
-                border-left: 1px solid DimGray;
-                cursor: pointer;
-            }
-        }
-
-        div.editTable {
-            border: 0px solid black;
-            width: 1000px;
-            height: 650px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 100px;
-            background-color: white;
-            margin-bottom: 100px;
-        }
-
-        h3 {
-            text-align: center;
-        }
-
-        table {
-            margin-right: auto;
-            margin-left: auto;
-        }
-        input{
-            width: 250px;
-            height: 30px;
-        }
-        img{
-            max-width: 100%;
-            height: 250px;
-        }
-    </style>
-</head>
-<body>
+</style>
 <nav class="navbar">
-    <div class="contronller">
+    <div class="controller">
         <a class="navbar-brand" href="/home">
             HOME
         </a>
 
         <div class="navbar-left">
-            <a class="nav-link" href="#">Link 1</a>
+            <a class="nav-link" href="/addProduct">add Product</a>
             <a class="nav-link" href="#">Link 2</a>
             <a class="nav-link" href="#">Link 3</a>
             <a class="nav-link" href="#">Link 4</a>
-            <a class="nav-link" href="#">Link 5</a>
+            <a class="nav-search-box" href="/searchProduct">
+                <div class="input-group">
+                    <div class="form-outline">
+                        <input type="search" id="form1" class="form-control"/>
+                        <label class="form-label" for="form1"></label>
+                    </div>
+                    <button type="button" class="btn btn-primary">
+                        <i class="fas fa-search">Search</i>
+                    </button>
+                </div>
+            </a>
+
         </div>
 
         <div class="navbar-right">
-
-            <a class="nav-link" href="/signin">SIGN IN</a>
-            <a class="nav-link" href="/signup">SIGN UP</a>
+            <a class="nav-link" href="/signout">SIGN OUT</a>
         </div>
     </div>
 </nav>
+
+<style>
+    .input-group {
+        float: none;
+        position: absolute;
+        top: 0%;
+        left: -5%;
+    }
+
+    .form-control {
+        height:38px;
+    }
+
+    .form-outline {
+        float: none;
+        position: absolute;
+        top: 25%;
+        left: 65%;
+    }
+
+    .btn-primary {
+        float: none;
+        position: absolute;
+        left: 80%;
+        transform: translate(0%, 25%);
+    }
+
+    .headline {
+        text-align: center;
+        margin-top: 75px;
+        margin-bottom: 10px;
+    }
+
+    h1 {
+        font-size: 18px;
+        padding: 10px 20px;
+        text-transform: uppercase;
+        border: 1px solid #bebebe;
+        display: inline-block;
+        color: #555;
+        font-weight: 600;
+    }
+
+</style>
+<body>
+<div class="headline">
+    <h1>shop ba con sói hướng nội</h1>
+</div>
 <div class="editTable">
     <h3>Thông tin cần nhập của sản phẩm</h3>
     <form method="post">
