--- a/view/admin/homeOfAdmin.html
+++ b/view/admin/homeOfAdmin.html
@@ -1,282 +1,327 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Home Page</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-          integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-          crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-          integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-          crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <title>Home Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+            integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+            integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+            crossorigin="anonymous"></script>
 </head>
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap');
 
-  body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
-    color: #111;
-    line-height: 1.15;
-    margin-top: 75px
-  }
-  /* * * * * * * * * * * * * * * * * * * * * * * * * * *
-* Reseting CSS
-*/
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+    body {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 14px;
+        color: #111;
+        line-height: 1.15;
+        margin-top: 75px
+    }
 
-  /* * * * * * * * * * * * * * * * * * * * * * * * * * *
-   * Styling navigation bar for large screen devices
-   */
+    /* * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * Reseting CSS
+ */
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 
-  .navbar {
-    position: fixed;
-    z-index: 99999;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: Black;
-    padding-top: 0;
-    padding-bottom: 0;
-    font-size: 15px
-  }
-  .navbar-brand {
-    width: 100px;
+    /* * * * * * * * * * * * * * * * * * * * * * * * * * *
+     * Styling navigation bar for large screen devices
+     */
 
-    display: inline-block;
-  }
+    .navbar {
+        position: fixed;
+        z-index: 99999;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background: Black;
+        padding-top: 0;
+        padding-bottom: 0;
+        font-size: 15px;
+    }
 
-  .navbar-left {
-    display: inline-block;
-    margin-left: 15px;
-  }
+    .navbar-brand {
+        width: 100px;
 
-  .navbar-right {
-    display: inline-block;
-    margin-right: 15px;
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
+        display: inline-block;
+    }
 
-  .navbar-brand,
-  .navbar .nav-link {
-    color: White;
-    text-decoration: none;
-    display: inline-block;
-    padding: 15px;
-  }
-
-  .navbar-brand {
-    font-weight: bold;
-    padding-left: 30px;
-    padding-right: 30px;
-    background: RoyalBlue;
-  }
-
-  .navbar .nav-link:hover {
-    color: LightGray;
-  }
-
-  .navbar-collapse,
-  .navbar-toggler {
-    display: none;
-  }
-
-  /* * * * * * * * * * * * * * * * * * * * * * * * * * *
-   * Override styles to support mobile devices
-   */
-
-  @media (max-width: 842px) {
-    .navbar-right,
     .navbar-left {
-      display: block;
-      border-top: 1px solid DimGray;
+        display: inline-block;
+        margin-left: 15px;
+    }
+
+    .navbar-middle {
+        display: inline-block;
+        margin-left: 15px;
+        top: 50%;
+        left: 50%
     }
 
     .navbar-right {
-      position: static;
+        display: inline-block;
+        margin-right: 15px;
+        position: absolute;
+        top: 0;
+        right: 0;
     }
 
+    .navbar-brand,
     .navbar .nav-link {
-      display: block;
+        color: White;
+        text-decoration: none;
+        display: inline-block;
+        padding: 15px;
     }
 
-    .navbar-collapse:checked + .navbar {
-      max-height: 50px;
-      overflow: hidden;
+    .navbar-brand {
+        font-weight: bold;
+        padding-left: 30px;
+        padding-right: 30px;
+        background: RoyalBlue;
     }
 
+    .navbar .nav-link:hover {
+        color: LightGray;
+    }
+
+    .navbar-collapse,
     .navbar-toggler {
-      color: White;
-      display: inline-block;
-      padding: 15px 25px;
-      position: absolute;
-      top: 0;
-      right: 0;
-      border-left: 1px solid DimGray;
-      cursor: pointer;
+        display: none;
     }
-  }
+
+    /* * * * * * * * * * * * * * * * * * * * * * * * * * *
+     * Override styles to support mobile devices
+     */
+
+    @media (max-width: 842px) {
+        .navbar-right,
+        .navbar-left {
+            display: block;
+            border-top: 1px solid DimGray;
+        }
+
+        .navbar-right {
+            position: static;
+        }
+
+        .navbar .nav-link {
+            display: block;
+        }
+
+        .navbar-collapse:checked + .navbar {
+            max-height: 50px;
+            overflow: hidden;
+        }
+
+        .navbar-toggler {
+            color: White;
+            display: inline-block;
+            padding: 15px 25px;
+            position: absolute;
+            top: 0;
+            right: 0;
+            border-left: 1px solid DimGray;
+            cursor: pointer;
+        }
+    }
 </style>
 <nav class="navbar">
-  <div class="contronller">
-    <a class="navbar-brand" href="/home">
-      HOME
-    </a>
+    <div class="controller">
+        <a class="navbar-brand" href="/home">
+            HOME
+        </a>
 
-    <div class="navbar-left">
-      <a class="nav-link" href="/addProduct">add Product</a>
-      <a class="nav-link" href="#">Link 2</a>
-      <a class="nav-link" href="#">Link 3</a>
-      <a class="nav-link" href="#">Link 4</a>
-      <a class="nav-link" href="#">Link 5</a>
+        <div class="navbar-left">
+            <a class="nav-link" href="/addProduct">add Product</a>
+            <a class="nav-link" href="#">Link 2</a>
+            <a class="nav-link" href="#">Link 3</a>
+            <a class="nav-link" href="#">Link 4</a>
+            <a class="nav-search-box" href="/searchProduct">
+                <div class="input-group">
+                    <div class="form-outline">
+                        <input type="search" id="form1" class="form-control"/>
+                        <label class="form-label" for="form1"></label>
+                    </div>
+                    <button type="button" class="btn btn-primary">
+                        <i class="fas fa-search">Search</i>
+                    </button>
+                </div>
+            </a>
+
+        </div>
+
+        <div class="navbar-right">
+            <a class="nav-link" href="/signout">SIGN OUT</a>
+        </div>
     </div>
-
-    <div class="navbar-right">
-
-      <a class="nav-link" href="/signout">SIGN OUT</a>
-    </div>
-  </div>
-
 </nav>
 
-<body >
 <style>
-  /*Li va Ul*/
-  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap');
+    .input-group {
+        float: none;
+        position: absolute;
+        top: 0%;
+        left: -5%;
+    }
 
-  * {
-    padding: 0;
-    margin: 0;
-  }
+    .form-control {
+        height:38px;
+    }
 
-  body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
-    color: #111;
-    line-height: 1.15;
+    .form-outline {
+        float: none;
+        position: absolute;
+        top: 25%;
+        left: 65%;
+    }
 
-  }
+    .btn-primary {
+        float: none;
+        position: absolute;
+        left: 80%;
+        transform: translate(0%, 25%);
+    }
 
-  #wrapper {
-    max-width: 1170px;
-    margin: 0 auto;
-  }
+</style>
+<body>
+<style>
+    /*Li va Ul*/
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap');
 
-  .headline {
-    text-align: center;
-    margin-top: 75px;
-    margin-bottom: 10px;
-  }
+    * {
+        padding: 0;
+        margin: 0;
+    }
 
-  h1 {
-    font-size: 18px;
-    padding: 10px 20px;
-    text-transform: uppercase;
-    border: 1px solid #bebebe;
-    display: inline-block;
-    color: #555;
-    font-weight: 600;
-  }
+    body {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 14px;
+        color: #111;
+        line-height: 1.15;
 
-  ul.products {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
+    }
 
-  ul.products li {
-    flex-basis: 25%;
-    padding-left: 15px;
-    padding-right: 15px;
-    box-sizing: border-box;
-    margin-bottom: 30px;
-  }
+    #wrapper {
+        max-width: 1170px;
+        margin: 0 auto;
+    }
 
-  ul.products li img {
+    .headline {
+        text-align: center;
+        margin-top: 75px;
+        margin-bottom: 10px;
+    }
 
-    max-width: 100%;
-    height: 250px;
-  }
+    h1 {
+        font-size: 18px;
+        padding: 10px 20px;
+        text-transform: uppercase;
+        border: 1px solid #bebebe;
+        display: inline-block;
+        color: #555;
+        font-weight: 600;
+    }
 
-  ul.products li .product-top {
-    position: relative;
-    overflow: hidden;
-  }
+    ul.products {
+        list-style: none;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
 
-  ul.products li .product-top .product-thumb {
-    display: block;
-  }
+    ul.products li {
+        flex-basis: 25%;
+        padding-left: 15px;
+        padding-right: 15px;
+        box-sizing: border-box;
+        margin-bottom: 30px;
+    }
 
-  ul.products li:hover .product-top .product-thumb img {
-    filter: opacity(80%);
-  }
+    ul.products li img {
 
-  ul.products li .product-top .product-thumb img {
-    display: block;
+        max-width: 100%;
+        height: 250px;
+    }
 
-  }
+    ul.products li .product-top {
+        position: relative;
+        overflow: hidden;
+    }
 
-  ul.products li .product-top a.shopping-cart {
-    text-transform: uppercase;
-    text-decoration: none;
-    text-align: center;
-    display: block;
-    background-color: darkgray;
-    padding: 10px 0;
-    position: absolute;
-    bottom: -36px;
-    width: 100%;
-    transition: 0.25s ease-in-out;
-    opacity: 0.75;
-  }
+    ul.products li .product-top .product-thumb {
+        display: block;
+    }
 
-  ul.products li:hover a.shopping-cart {
-    bottom: 0;
-  }
+    ul.products li:hover .product-top .product-thumb img {
+        filter: opacity(80%);
+    }
 
-  ul.products li .product-info {
-    padding: 20px 0;
-  }
+    ul.products li .product-top .product-thumb img {
+        display: block;
 
-  ul.products li .product-info a {
-    display: block;
-    text-decoration: none;
-  }
+    }
 
-  ul.products li .product-info a.product-cat {
-    font-size: 11px;
-    text-transform: uppercase;
-    color: green;
-    padding: 3px 0;
-  }
+    ul.products li .product-top a.shopping-cart {
+        text-transform: uppercase;
+        text-decoration: none;
+        text-align: center;
+        display: block;
+        background-color: darkgray;
+        padding: 10px 0;
+        position: absolute;
+        bottom: -36px;
+        width: 100%;
+        transition: 0.25s ease-in-out;
+        opacity: 0.75;
+    }
 
-  ul.products li .product-info a.product-name {
-    color: greenyellow;
-    padding: 3px 0;
-  }
+    ul.products li:hover a.shopping-cart {
+        bottom: 0;
+    }
 
-  ul.products li .product-info .product-price {
-    color: aqua;
-    padding: 2px 0;
-    font-weight: 600;
-  }
+    ul.products li .product-info {
+        padding: 20px 0;
+    }
+
+    ul.products li .product-info a {
+        display: block;
+        text-decoration: none;
+    }
+
+    ul.products li .product-info a.product-cat {
+        font-size: 11px;
+        text-transform: uppercase;
+        color: green;
+        padding: 3px 0;
+    }
+
+    ul.products li .product-info a.product-name {
+        color: greenyellow;
+        padding: 3px 0;
+    }
+
+    ul.products li .product-info .product-price {
+        color: aqua;
+        padding: 2px 0;
+        font-weight: 600;
+    }
 </style>
 <div id="wrapper">
-  <div class="headline">
-    <h1>shop ba con sói hướng nội</h1>
-  </div>
-  <ul class="products">
-    {product}
-  </ul>
+    <div class="headline">
+        <h1>shop ba con sói hướng nội</h1>
+    </div>
+    <ul class="products">
+        {product}
+    </ul>
 </div>
 
 
