--- a/view/index.html
+++ b/view/index.html
@@ -22,6 +22,7 @@
         line-height: 1.15;
         margin-top: 75px
     }
+
     /* * * * * * * * * * * * * * * * * * * * * * * * * * *
  * Reseting CSS
  */
@@ -44,8 +45,9 @@
         background: Black;
         padding-top: 0;
         padding-bottom: 0;
-        font-size: 15px
+        font-size: 15px;
     }
+
     .navbar-brand {
         width: 100px;
 
@@ -55,6 +57,13 @@
     .navbar-left {
         display: inline-block;
         margin-left: 15px;
+    }
+
+    .navbar-middle {
+        display: inline-block;
+        margin-left: 15px;
+        top: 50%;
+        left: 50%
     }
 
     .navbar-right {
@@ -136,18 +145,54 @@
             <a class="nav-link" href="#">Link 2</a>
             <a class="nav-link" href="#">Link 3</a>
             <a class="nav-link" href="#">Link 4</a>
-            <a class="nav-link" href="#">Link 5</a>
+            <a class="nav-search-box" href="/searchProduct">
+                <div class="input-group">
+                    <div class="form-outline">
+                        <input type="search" id="form1" class="form-control"/>
+                        <label class="form-label" for="form1"></label>
+                    </div>
+                    <button type="button" class="btn btn-primary">
+                        <i class="fas fa-search">Search</i>
+                    </button>
+                </div>
+            </a>
+
         </div>
 
         <div class="navbar-right">
-
             <a class="nav-link" href="/signout">SIGN OUT</a>
         </div>
     </div>
-
 </nav>
 
-<body >
+<style>
+    .input-group {
+        float: none;
+        position: absolute;
+        top: 0%;
+        left: -5%;
+    }
+
+    .form-control {
+        height: 38px;
+    }
+
+    .form-outline {
+        float: none;
+        position: absolute;
+        top: 25%;
+        left: 65%;
+    }
+
+    .btn-primary {
+        float: none;
+        position: absolute;
+        left: 80%;
+        transform: translate(0%, 25%);
+    }
+
+</style>
+<body>
 <style>
     /*Li va Ul*/
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap');
