--- a/view/product/shoppingCart.html
+++ b/view/product/shoppingCart.html
@@ -163,7 +163,6 @@
             <a class="nav-link" href="/signout">SIGN OUT</a>
         </div>
     </div>
-
 </nav>
 
 <style>
@@ -172,6 +171,10 @@
         position: absolute;
         top: 0%;
         left: -5%;
+    }
+
+    .form-control {
+        height:38px;
     }
 
     .form-outline {
@@ -186,7 +189,6 @@
         position: absolute;
         left: 80%;
         transform: translate(0%, 25%);
-
     }
 
     .MainBoundary {
@@ -253,7 +255,6 @@
     }
 
 </style>
-
 <body>
 <div class="MainBoundary">
     <div class="ShoppingCartIntro">Shopping Cart</div>
