--- a/view/index.html
+++ b/view/index.html
@@ -133,7 +133,7 @@
 
         <div class="navbar-left">
             <a class="nav-link" href="/addProduct">add Product</a>
-            <a class="nav-link" href="#">Link 2</a>
+            <a class="nav-link" href="/shoppingCart">shoppingCart</a>
             <a class="nav-link" href="#">Link 3</a>
             <a class="nav-link" href="#">Link 4</a>
             <a class="nav-link" href="#">Link 5</a>
