--- a/view/product/shoppingCart.html
+++ b/view/product/shoppingCart.html
@@ -138,6 +138,10 @@
 </nav>
 
 <style>
+    img {
+        max-width: 100%;
+        height: 250px;
+    }
 
     .MainBoundary {
         margin-top: 5.5%;
@@ -197,7 +201,7 @@
             <th>Price</th>
             <th>Image</th>
             <th>Description</th>
-            <th>Change</th>
+            <th colspan="2">Change</th>
         </tr>
         <tbody>
         {shoppingcart}
