--- a/view/product/shoppingCart.html
+++ b/view/product/shoppingCart.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
             integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
             crossorigin="anonymous"></script>
+    <script src="../../controler/handle/productController.js"></script>
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap');
@@ -263,9 +264,8 @@
 <div class="MainBoundary">
     <div class="ShoppingCartIntro">Shopping Cart</div>
     <div class="BuyButton">
-        <form action="" method="post" style="text-align: center">
-            <button type="submit">Purchase</button>
-        </form>
+        <button type="button" class="btn btn-outline-danger"  id="deleteBtn" >Delete</button>
+        {deleteAll}
     </div>
     <table>
         <tr>
@@ -274,6 +274,7 @@
             <th>Price</th>
             <th>Image</th>
             <th>Description</th>
+            <th>Price</th>
             <th colspan="2">Change</th>
         </tr>
         <tbody>
