--- a/view/index.html
+++ b/view/index.html
@@ -225,9 +225,12 @@
         <h1>shop ba con sói hướng nội</h1>
     </div>
     <div>
-        <label>-Sắp xếp-</label><br>
-        <button><a href="/sortUp">Sắp xếp theo giá tăng dần</a></button><br>
-        <button><a href="/sortDown">Sắp xếp theo giá giảm dần</a></button>
+        <select>
+            <option>-Sắp xếp-</option>
+            <option value="http://localhost:8080/sortUp">Sắp xếp theo giá tăng dần</option><br>
+            <option value="http://localhost:8080/sortDown">Sắp xếp theo giá giảm dần</option><br>
+
+        </select>
     </div>
     <ul class="products">
         {product}
