--- a/view/product/shoppingCart.html
+++ b/view/product/shoppingCart.html
@@ -335,7 +335,7 @@
         {shoppingCart}
         </tbody>
     </table>
-    <div class="totalPrice">{totalPrice}</div>
+    <div class="totalPrice" style="font-size: 50px; color:#0061ff" >Total: {totalPrice}VND</div>
     <div class></div>
 </div>
 </body>
